gcc/testsuite/g++.dg/cpp0x/gen-attrs-64.C
// PR c++/85140
// { dg-do compile { target c++11 } }

namespace N alignas() {}	// { dg-error "expected" }
